# gitstore

./: .actrc  .env.example  .gitignore  AGENTS.md  README.md  buf.gen.go.yaml  buf.gen.rust.yaml  compose.admin.yml  compose.scylla.yml  compose.yml
.githooks/: pre-commit
.github/: act-push-event.json
.github/workflows/: cd.yml  ci-admin.yml  ci-integration.yml  ci-proto.yml  ci.yml  go-license-headers.yml  js-license-headers.yml  rust-license-headers.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
docker/: git-service.Dockerfile
docs/: api-reference.md  architecture.md  configuration.md  developer-guide.md  docker-troubleshooting.md  ideas.md  user-guide.md
docs/admin/: quickstart.md
docs/implementation/: GIT_PROTOCOL_IMPLEMENTATION_PLAN.md
gitstore-admin/: astro.config.mjs  codegen.yml  package-lock.json  package.json  playwright.config.ts
gitstore-admin/src/: env.d.ts
gitstore-api/: .env.example  generate.go  go.mod  go.sum  gqlgen.yml  tools.go
gitstore-git-service/: .env.example  Cargo.toml  build.rs
gitstore-git-service/src/: config.rs  http_git_server.rs  lib.rs  main.rs
gitstore-git-service/src/git/: events.rs  hooks.rs  metrics.rs  mod.rs  pack_server.rs  repo.rs
gitstore-git-service/src/grpc/: metrics.rs  mod.rs  server.rs
gitstore-git-service/src/websocket/: broadcast.rs  connections.rs  mod.rs  server.rs
gitstore-git-service/tests/integration/: http_smart_protocol.rs  mod.rs  push_validation_test.rs  tag_notification_test.rs
scripts/: README.md  check-go-license-headers.sh  check-js-license-headers.sh  check-rust-license-headers.sh  init-demo-catalog.sh  install-git-hooks.sh
shared/proto/: buf.yaml
shared/schemas/: auth.graphqls  category.graphqls  collection.graphqls  namespace.graphqls  product.graphqls  schema.graphql  schema.graphqls
specs/001-git-backed-ecommerce/: tasks.md
specs/003-oss-alignment/: spec.md
specs/004-grpc-git-service/: spec.md  tasks.md
specs/005-structured-config-mgmt/: data-model.md  plan.md  (+4 more)
(+202 files in other folders)
