[package]
name = "gitstore-server"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.18"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8.8", features = ["http2", "macros"] }
tokio-stream = "0.1.18"
hyper = "1.8.1"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs"] }
http-body-util = "0.1.3"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "git-service"
path = "src/main.rs"

[lib]
name = "gitstore"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
